# BinanceFlow

./: BinanceFlow.ipynb  Makefile  README.md  crud.py  data_download.py  database.py  docker-compose.yml  env-sample.txt  models.py  package-lock.json  package.json  pyproject.toml  routes.py  setup.sh  test_connection.py  test_connection.py   valid_predictions.csv
frontend/btc-chart/: package-lock.json  package.json  vite.config.js
frontend/btc-chart/src/: App.vue
frontend/btc-chart/src/components/: BTCChart.vue
frontend/btc_chart/: README.md  package-lock.json  package.json
frontend/btc_chart/src/: App.vue  main.js
frontend/btc_chart/src/components/: BTCChart.vue  CandleView.vue  FilterDate.vue
frontend/btc_chart/src/router/: index.js
frontend/todo-app/: package-lock.json  package.json
frontend/todo-app/src/: App.vue
frontend/todo-app/src/components/: BTCChart.vue  ToDoList.vue  TodoList.vue
notebooks/: BTCUSDT_1h_data.csv  BinanceFlow.ipynb  BinanceFlow.py  BinanceFlow.py.txt  btc_price_predictions.csv
src/api/: app.py
src/ingestion/: binance_ingestion.py
src/model/: first.py  train.py
tests/: minio-test.py
